@@ -20,13 +20,13 @@ public:
 	CFormDoc& GetDoc() {return m_Doc;} 
 
 protected:
-	virtual void LoadRegistrySettings(LPCTSTR szKeyName);
+	virtual BOOL LoadRegistrySettings(LPCTSTR szKeyName);
 	virtual BOOL OnCommand(WPARAM wParam, LPARAM lParam);
 	virtual void OnCreate();
 	virtual void OnInitialUpdate();
 	virtual void PreCreate(CREATESTRUCT& cs);
 	virtual void OnMenuUpdate(UINT nID);
-	virtual void SaveRegistrySettings();
+	virtual BOOL SaveRegistrySettings();
 	virtual void SetupToolbar();
 	virtual LRESULT WndProc(UINT uMsg, WPARAM wParam, LPARAM lParam);
 
